# character-ai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  Dockerfile  Dockerfile.models  LICENSE  Makefile  README.md  docker-compose.yml  manifest.json  mypy.ini  pyproject.toml  pytest.ini
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  dependabot.yml  docker-publish.yml  pr-checks.yml  security-scan.yml
configs/: demo.yaml  development.yaml  production.yaml  runtime.yaml
configs/characters/: test_character.yaml  voice_metadata.json
configs/characters/data/: profile.yaml  prompts.yaml
configs/characters/data/processed_samples/: data_embedding.npz  data_metadata.json
configs/hardware/: README.md  desktop.yaml  orange_pi.yaml  raspberry_pi.yaml
configs/language_packs/: chinese.yaml  french.yaml  spanish.yaml
configs/templates/prompts/: base_character.jinja2
docs/: memory_system.md  production_deployment.md  toy_deployment.md
docs/api/: authentication.md  character_examples.md  endpoints.md  openapi.json  openapi.yaml  production_api.md
monitoring/: README.md  prometheus.yml
monitoring/grafana/dashboards/: character-ai-dashboard.json  memory-dashboard.json  memory-system-dashboard.json
schemas/: consent.schema.json  index.schema.json  profile.schema.json
scripts/: backup_memory_data.py  build_model_bundle.py  consolidate_voices.py  convert_characters.py  demo_toy_operation.py  download_models.py  generate_openapi.py  generate_schemas.py  install_model_bundle.py  optimize_ci.py  profile_validate.py  recompute_voice_embeddings.py  restore_memory_data.py  test_interactive_character.py  validate_env_vars.py  validate_production.py  verify_models.py
src/character_ai/: __init__.py
src/character_ai/algorithms/: __init__.py
src/character_ai/algorithms/conversational_ai/: __init__.py  conversation_storage.py  coqui_processor.py  coqui_voice_cloning_service.py  hybrid_memory.py  llama_cpp_processor.py  llama_processor.py  optimized_conversation_storage.py  preference_extractor.py  session_memory.py  text_normalizer.py  wav2vec2_processor.py  whisper_processor.py  xtts_processor.py
src/character_ai/algorithms/safety/: classifier.py  multilingual_classifier.py
src/character_ai/characters/: __init__.py  ai_generator.py  bundler.py  catalog.py  catalog_storage.py  catalog_voice_manager.py  cost_monitor.py  manager.py  profile_models.py  response_filter.py  safety_filter.py  schema_voice_manager.py  types.py  validation.py  voice_manager.py
src/character_ai/characters/catalog/: __init__.py  bundler.py  catalog.py  catalog_storage.py
src/character_ai/characters/management/: __init__.py  character.py  dimensions.py  enums.py  loaders.py  manager.py  profile_models.py  templates.py  types.py  validation.py
src/character_ai/characters/safety/: __init__.py  response_filter.py  safety_filter.py
src/character_ai/characters/voices/: __init__.py  catalog_voice_manager.py  schema_voice_manager.py  voice_manager.py  voice_metadata_manager.py
src/character_ai/cli/: __init__.py  character.py  config.py  deploy.py  llm.py  main.py  memory.py  test.py
src/character_ai/cli/character/: __init__.py  creation.py  helpers.py  management.py
src/character_ai/cli/test/: __init__.py  helpers.py  realtime.py  voice_pipeline.py
src/character_ai/core/: __init__.py  config.py  crash_reporting.py  edge_optimizer.py  exceptions.py  hardware_profile.py  language_support.py  log_aggregation.py  metrics.py  model_instantiator.py  model_registry.py  model_utils.py  model_warmup.py  multilingual_audio.py  parental_controls.py  performance.py  personalization.py  protocols.py  resilience.py  resource_manager.py  response_cache.py  security.py  streaming_audio.py  streaming_llm.py  torch_init.py  voice_activity_detection.py
src/character_ai/core/audio_io/: __init__.py  audio_config.py  audio_utils.py  device_manager.py  device_selector.py  factory.py  interfaces.py  mock_audio.py  real_audio.py  vad_session.py  voice_activity_detection.py  wake_word_detector.py
src/character_ai/core/caching/: __init__.py  memory_cache.py
src/character_ai/core/config/: __init__.py  base.py  hardware.py  main.py  models.py  runtime.py  yaml_loader.py
src/character_ai/core/database/: connection_pool.py
src/character_ai/core/deployment/: bundler.py
src/character_ai/core/llm/: __init__.py  cli.py  config.py  factory.py  manager.py  prompt_builder.py  providers.py  template_prompt_builder.py
src/character_ai/core/persistence/: __init__.py  base_manager.py  (+1 more)
src/character_ai/features/: __init__.py
src/character_ai/hardware/: __init__.py  power_manager.py  sensor_interface.py  toy_hardware_manager.py
src/character_ai/monitoring/: elk_integration.py  grafana_config.py  prometheus_export.py
src/character_ai/observability/: __init__.py  crash_reporting.py  grafana_config.py  log_aggregation.py  logging.py  memory_metrics.py  metrics.py  prometheus_export.py
src/character_ai/production/: __init__.py  real_time_engine.py  toy_setup.py
src/character_ai/services/: __init__.py  base_service.py  edge_optimizer.py  error_messages.py  hardware_profile_service.py  llm_service.py  pipeline_orchestrator.py  stt_service.py  tts_service.py
src/character_ai/web/: __init__.py  error_handling_middleware.py  health_api.py  language_api.py  log_search_api.py  logging_middleware.py  metrics_api.py  monitoring_api.py  multilingual_audio_api.py  parental_controls_api.py  performance_api.py  personalization_api.py  security_deps.py  streaming_api.py  toy_api.py
tests/: __init__.py  conftest.py  test_basic_coverage.py  test_config.py  test_core_functionality.py  test_exceptions.py  test_llm_providers_simple.py  test_schema_voice_manager_simple.py  test_security.py  test_voice_manager.py
tests/integration/: test_end_to_end.py  test_simple_integration.py
tests/testing_utilities/: __init__.py  audio_tester.py  mock_hardware.py  voice_pipeline_tester.py
(+80 files in other folders)
